--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "baseUrl": ".",
-    "types": ["node", "vite/client"],
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
-    }
+    },
+    "types": ["node", "vite/client"]
   }
 }
